[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nasa-cmr-ai-agent"
version = "0.1.0"
description = "AI agent system for NASA CMR data discovery with advanced multi-agent capabilities"
authors = ["NASA Technical Assessment"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.39"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langchain-anthropic = "^0.2.4"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.28.1"
pydantic = "^2.10.2"
redis = "^5.2.0"
asyncio-mqtt = "^0.16.2"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
geopandas = "^1.0.1"
folium = "^0.18.0"
streamlit = "^1.40.1"
aiofiles = "^24.1.0"
tenacity = "^9.0.0"
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
weaviate-client = "^4.9.3"
sentence-transformers = "^3.3.1"
neo4j = "^5.27.0"
langchain-community = "^0.3.7"
chromadb = "^0.5.20"
faiss-cpu = "^1.9.0"
python-dotenv = "^1.1.1"
anthropic = "^0.63.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest-mock = "^3.14.0"
httpx-mock = "^0.12.0"
freezegun = "^1.5.1"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nasa_cmr_agent"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=nasa_cmr_agent --cov-report=term-missing --cov-report=html --cov-fail-under=85"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["nasa_cmr_agent"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*"
]